[gd_scene load_steps=12 format=2]

[ext_resource path="res://Src/scenes/Templates/GUI/ProgressionBar/ProgressionBar.gd" type="Script" id=1]
[ext_resource path="res://Media/GUI/restmode/enter animation/Unbenannt1.png" type="Texture" id=2]
[ext_resource path="res://Src/scenes/Templates/GUI/ProgressionBar/hover up.gd" type="Script" id=3]
[ext_resource path="res://Media/GUI/restmode/enter animation/Unbenannt3.png" type="Texture" id=4]
[ext_resource path="res://Media/GUI/restmode/enter animation/Unbenannt2.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.592157, 0.643137, 0.764706, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.129412, 0.129412, 0.129412, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.764706, 1, 0.721569, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0901961, 0.737255, 0.129412, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0784314, 1, 0, 1 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Settingwechsel" type="Node2D"]
script = ExtResource( 1 )

[node name="Outline" type="Panel" parent="."]
margin_left = 432.0
margin_top = 192.0
margin_right = 1304.0
margin_bottom = 224.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullBar" type="Panel" parent="."]
margin_left = 440.0
margin_top = 200.0
margin_right = 1296.0
margin_bottom = 216.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToGrowProg" type="Panel" parent="."]
margin_left = 440.0
margin_top = 200.0
margin_right = 440.0
margin_bottom = 216.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AchivedProg" type="Panel" parent="."]
margin_left = 440.0
margin_top = 200.0
margin_right = 440.0
margin_bottom = 216.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrowProg" type="Panel" parent="."]
margin_left = 440.0
margin_top = 200.0
margin_right = 440.0
margin_bottom = 216.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="AnimatedSprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 888, 360 )
frames = SubResource( 6 )
frame = 2
playing = true
script = ExtResource( 3 )
